# modern_libr

./: .ignore  Cargo.toml  LICENSE  NOTES.md  README.md  build.rs  wrapper_head.h  wrapper_head_Rcomplex.h
.cargo/: config.toml
src/: lib.rs
src/bindings/: R.rs  Rconfig.rs  Rdefines.rs  Rembedded.rs  Rinterface.rs  Rinternals.rs  Rmath.rs  Rversion.rs  ga.rs  graphapp.rs  iconv.rs  libintl.rs
src/bindings/R_ext/: Altrep.rs  Applic.rs  Arith.rs  BLAS.rs  Boolean.rs  Callbacks.rs  Complex.rs  Connections.rs  Constants.rs  Error.rs  GetX11Image.rs  GraphicsDevice.rs  GraphicsEngine.rs  Itermacros.rs  Lapack.rs  Linpack.rs  MathThreads.rs  Memory.rs  Parse.rs  Print.rs  PrtUtil.rs  QuartzDevice.rs  RS.rs  RStartup.rs  Rallocators.rs  Random.rs  Rdynload.rs  Riconv.rs  Utils.rs  Visibility.rs  eventloop.rs  libextern.rs  stats_package.rs  stats_stubs.rs
