[package]
name = "modern_libr"
authors = ["Mossa Merhi Reimert <cgmossa@gmail.com>"]
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
generate_bindings = ["rayon"]

[build-dependencies]
bindgen = "0.66"
rayon = { version = "1.7", optional = true }

[dependencies]
